--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -38,9 +38,9 @@
     </Window.InputBindings>
 
     <Border Background="Transparent" Panel.ZIndex="1" KeyboardNavigation.TabNavigation="None">
-        <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" >
-            <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" >
-                <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" >
+        <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Background="Black">
+            <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
+                <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
                     <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
                         <Grid>
                             <Grid.RowDefinitions>
