--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -1,12 +1,58 @@
 <UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.DigiWikiUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:digiWiki="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki"
+             xmlns:userControls="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls"
              Height="565"
              Width="1093"
-             mc:Ignorable="d">
-    <Grid>
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=digiWiki:DigiWikiViewModel, IsDesignTimeCreatable=True}">
 
-    </Grid>
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/DefaultTextboxStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/DefaultComboboxStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/DefaultFocusStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/Labels/DefaultSheenLabelStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/ToolTips/DefaultTooltipLeftStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/Buttons/DefaultButtonStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
+    <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="0" Background="#90D9FA">
+        <Grid KeyboardNavigation.TabNavigation="Cycle" Background="Transparent">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Border Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3, 3, 1.5, 3" Background="#90D9FA">
+                <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3">
+                    <Grid Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="100" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" Grid.Column="0" Height="40" Width="100" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
+                            TOPICS
+                        </Label>
+                        <WrapPanel Grid.Row="1" HorizontalAlignment="Center">
+                            <userControls:NavigationButton IconPath="/Frontend.WPF;component/Images/Icons/Emotions/food1.jpg" Command="{Binding OpenFoodTopicCommand}" LabelText="Food &amp; Energy"/>
+                        </WrapPanel>
+                    </Grid>
+                </Border>
+            </Border>
+
+            <Border Grid.Column="1" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3, 3, 1.5, 3" Background="{StaticResource DefaultBackGroundColor}">
+                <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3">
+                    <ContentControl Content="{Binding CurrentSelectedDigiWikiContent}" x:Name="CurrentSelectedDigiWikiContent" />
+                </Border>
+            </Border>
+        </Grid>
+    </Border>
 </UserControl>
