--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/Navigation/UserControls/DigiWikiNavigationButton.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/Navigation/UserControls/DigiWikiNavigationButton.xaml
@@ -30,7 +30,7 @@
                         </Border.BorderBrush>
                     </Border>
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5">
-                        <Image x:Name="AnimatedImage" Source="/Images/Menu/Wiki1.png" Width="{StaticResource ButtonWidth}" Stretch="UniformToFill" />
+                        <Image x:Name="AnimatedImage" Source="/Images/Icons/Menu/Wiki1.png" Width="{StaticResource ButtonWidth}" Stretch="UniformToFill" />
                         <TextBlock Width="{StaticResource TextBlockWidth}" TextAlignment="Center" TextWrapping="Wrap">Digi-Wiki</TextBlock>
                     </StackPanel>
                 </Grid>
@@ -43,17 +43,17 @@
                                                                    Storyboard.TargetProperty="Source">
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0">
                                             <DiscreteObjectKeyFrame.Value>
-                                                <BitmapImage UriSource="/Images/Menu/Wiki1.png" />
+                                                <BitmapImage UriSource="/Images/Icons/Menu/Wiki1.png" />
                                             </DiscreteObjectKeyFrame.Value>
                                         </DiscreteObjectKeyFrame>
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0.4">
                                             <DiscreteObjectKeyFrame.Value>
-                                                <BitmapImage UriSource="/Images/Menu/Wiki2.png" />
+                                                <BitmapImage UriSource="/Images/Icons/Menu/Wiki2.png" />
                                             </DiscreteObjectKeyFrame.Value>
                                         </DiscreteObjectKeyFrame>
                                         <DiscreteObjectKeyFrame KeyTime="0:0:0.8">
                                             <DiscreteObjectKeyFrame.Value>
-                                                <BitmapImage UriSource="/Images/Menu/Wiki1.png" />
+                                                <BitmapImage UriSource="/Images/Icons/Menu/Wiki1.png" />
                                             </DiscreteObjectKeyFrame.Value>
                                         </DiscreteObjectKeyFrame>
                                     </ObjectAnimationUsingKeyFrames>
