--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
@@ -9,53 +9,160 @@
              Height="554"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=foodTopic:FoodTopicViewModel, IsDesignTimeCreatable=True}">
-    
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/Labels/DefaultSheenLabelStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/DefaultFocusStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/ToolTips/DefaultTooltipRightStyle.xaml" />
+                <ResourceDictionary Source="/ResourceDictionaries/Styles/Buttons/DefaultButtonStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="230"></ColumnDefinition>
-            <ColumnDefinition Width="650"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="300"></RowDefinition>
+            <RowDefinition Height="250"></RowDefinition>
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Grid.Column="0" Height="175" Source="/Images/Digimon/Shellmon-right.png" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,15,10,15"/>
-            
-        <Border Grid.Row="0" Grid.Column="1" CornerRadius="8" BorderBrush="Black" BorderThickness="3" Margin="0, 15,15, 10" Padding="0" Background="Black">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseLeftButtonDown">
-                    <b:InvokeCommandAction Command="{Binding InstantDisplayCommand}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
-            <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
-                <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#2E3841">
-                    <Border CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Padding="0" Background="#77000000">
-                        <StackPanel Margin="5">
-                            <TextBlock Text="Shellmon"
-                                       Foreground="#D4D604"
-                                       FontSize="15"
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Top"
-                                       Margin="0,5, 0, 5"
-                                       Width="545"
-                                       TextWrapping="Wrap" />
-                            <TextBlock Text="{Binding ShellmonText}"
-                                       Foreground="#B3B5B1"
-                                       FontSize="14"
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Top"
-                                       Margin="0, 5"
-                                       TextWrapping="Wrap" />
-                        </StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="230"></ColumnDefinition>
+                <ColumnDefinition Width="650"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0" Source="/Images/Digimon/Shellmon-right.png" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,15,10,15">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="MouseLeftButtonDown">
+                        <b:InvokeCommandAction Command="{Binding SpeakShellmonFactCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </Image>
+
+            <Border Grid.Row="0" Grid.Column="1" CornerRadius="8" BorderBrush="Black" BorderThickness="3" Margin="0, 15,15, 10" Padding="0" Background="Black">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="MouseLeftButtonDown">
+                        <b:InvokeCommandAction Command="{Binding InstantDisplayCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+                <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                    <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#2E3841">
+                        <Border CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Padding="0" Background="#77000000">
+                            <StackPanel Margin="5">
+                                <Grid Background="Transparent">
+                                    <TextBlock Grid.Row="0" Grid.Column="0"
+                                               Text="Shellmon"
+                                               Foreground="#D4D604"
+                                               FontSize="15"
+                                               HorizontalAlignment="Left"
+                                               VerticalAlignment="Top"
+                                               Margin="0,5, 0, 5"
+                                               Width="100"
+                                               TextWrapping="Wrap" />
+                                    <Button Grid.Row="0" Grid.Column="0"
+                                            FocusVisualStyle="{StaticResource DefaultFocusStyle}"
+                                            Style="{StaticResource DefaultButtonStyle}"
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            Margin="0,0, 0, 5"
+                                            Width="22"
+                                            Height="22"
+                                            Content="📖"
+                                            Command="{Binding SpeakFoodWikiCommand}">
+                                        <Button.ToolTip>
+                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Food chapter of the guide" />
+                                        </Button.ToolTip>
+                                    </Button>
+                                </Grid>
+                                <TextBlock Text="{Binding ShellmonText}"
+                                           Foreground="#B3B5B1"
+                                           FontSize="14"
+                                           HorizontalAlignment="Left"
+                                           VerticalAlignment="Top"
+                                           Margin="0, 5"
+                                           TextWrapping="Wrap" />
+                            </StackPanel>
+                        </Border>
                     </Border>
                 </Border>
             </Border>
-        </Border>
-        
-        <Border Grid.Row="1" Grid.Column="1" BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                <Image Width="300" Height="300" Source="{Binding DigimonType, Converter={StaticResource EnumToImageConverter}}" Stretch="Uniform" />
+        </Grid>
+
+        <Grid Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="270"></ColumnDefinition>
+                <ColumnDefinition Width="670"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Border Grid.Row="0" Grid.Column="0" CornerRadius="8" BorderBrush="Black" BorderThickness="3" Margin="15" Padding="0" Background="Black">
+                <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                    <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
+                        <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10,0" Background="{StaticResource DefaultBackGroundColor}">
+                            <StackPanel>
+                                <Label VerticalAlignment="Top" Height="40" Width="120" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
+                                    MORE INFO
+                                </Label>
+
+                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
+                                        Style="{StaticResource DefaultButtonStyle}"
+                                        Margin="0,0, 0, 5"
+                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Content="Guide: Food chapter"
+                                        Command="{Binding OpenGuideFoodChapterCommand}">
+                                    <Button.ToolTip>
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Food chapter of the guide" />
+                                    </Button.ToolTip>
+                                </Button>
+
+                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
+                                        Style="{StaticResource DefaultButtonStyle}"
+                                        Margin="0,0, 0, 5"
+                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Content="Guide: Hungry chapter"
+                                        Command="{Binding OpenGuideHungryChapterCommand}">
+                                    <Button.ToolTip>
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Hungry chapter of the guide" />
+                                    </Button.ToolTip>
+                                </Button>
+
+                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
+                                        Style="{StaticResource DefaultButtonStyle}"
+                                        Height="{StaticResource DefaultButtonHeight}"
+                                        Content="Excel: Digimon Raise"
+                                        Command="{Binding OpenDataSheetCommand}">
+                                    <Button.ToolTip>
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Data sheet.&#x0a;Then open the Digimon Raise tab." />
+                                    </Button.ToolTip>
+                                </Button>
+                            </StackPanel>
+                        </Border>
+                    </Border>
+                </Border>
             </Border>
-        </Border>
+
+            <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
+                        <Image Width="215" Height="215" Source="Media/hunger-condition-screen.jpg" Stretch="UniformToFill">
+                            <b:Interaction.Triggers>
+                                <b:EventTrigger EventName="MouseLeftButtonDown">
+                                    <b:InvokeCommandAction Command="{Binding SpeakHungerConditionScreenCommand}" />
+                                </b:EventTrigger>
+                            </b:Interaction.Triggers>
+                        </Image>
+                    </Border>
+                </Border>
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                    <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
+                        <Image Width="215" Height="215" Source="Media/hunger-condition-overworld.jpg" Stretch="UniformToFill">
+                            <b:Interaction.Triggers>
+                                <b:EventTrigger EventName="MouseLeftButtonDown">
+                                    <b:InvokeCommandAction Command="{Binding SpeakHungerConditionOverworldCommand}" />
+                                </b:EventTrigger>
+                            </b:Interaction.Triggers>
+                        </Image>
+                    </Border>
+                </Border>
+            </WrapPanel>
+        </Grid>
     </Grid>
 </UserControl>
