--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:foodTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.FoodTopic"
-             Width="1011"
              Height="554"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance Type=foodTopic:FoodTopicViewModel, IsDesignTimeCreatable=True}">
@@ -34,7 +33,7 @@
             <Image Grid.Row="0" Grid.Column="0" Source="/Images/Digimon/Shellmon-right.png" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,15,10,15">
                 <b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseLeftButtonDown">
-                        <b:InvokeCommandAction Command="{Binding SpeakShellmonFactCommand}" />
+                        <b:InvokeCommandAction Command="{Binding SpeakShellFactCommand}" />
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
             </Image>
@@ -68,7 +67,7 @@
                                             Width="22"
                                             Height="22"
                                             Content="📖"
-                                            Command="{Binding SpeakFoodWikiCommand}">
+                                            Command="{Binding SpeakWikiTextCommand}">
                                         <Button.ToolTip>
                                             <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Food chapter of the guide" />
                                         </Button.ToolTip>
@@ -91,13 +90,13 @@
         <Grid Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="270"></ColumnDefinition>
-                <ColumnDefinition Width="670"></ColumnDefinition>
+                <ColumnDefinition Width="630"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Border Grid.Row="0" Grid.Column="0" CornerRadius="8" BorderBrush="Black" BorderThickness="3" Margin="15" Padding="0" Background="Black">
                 <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10,0" Background="{StaticResource DefaultBackGroundColor}">
-                            <StackPanel>
+                            <StackPanel >
                                 <Label VerticalAlignment="Top" Height="40" Width="120" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
                                     MORE INFO
                                 </Label>
@@ -139,10 +138,10 @@
                 </Border>
             </Border>
 
-            <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="215" Height="215" Source="Media/hunger-condition-screen.jpg" Stretch="UniformToFill">
+                        <Image Width="286" Height="202" Source="Media/hunger-condition-screen.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
                                     <b:InvokeCommandAction Command="{Binding SpeakHungerConditionScreenCommand}" />
@@ -151,9 +150,9 @@
                         </Image>
                     </Border>
                 </Border>
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="215" Height="215" Source="Media/hunger-condition-overworld.jpg" Stretch="UniformToFill">
+                        <Image Width="247" Height="202" Source="Media/hunger-condition-overworld.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
                                     <b:InvokeCommandAction Command="{Binding SpeakHungerConditionOverworldCommand}" />
