--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:digiWiki="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki"
-             xmlns:userControls="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls"
+             xmlns:navigationButtons="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.NavigationButtons"
              Height="565"
              Width="1093"
              mc:Ignorable="d"
@@ -42,7 +42,8 @@
                             TOPICS
                         </Label>
                         <WrapPanel Grid.Row="1" HorizontalAlignment="Center">
-                            <userControls:NavigationButton IconPath="/Frontend.WPF;component/Images/Icons/Emotions/food1.jpg" Command="{Binding OpenFoodTopicCommand}" LabelText="Food &amp; Energy"/>
+                            <navigationButtons:FoodTopicNavigationButton Command="{Binding OpenFoodTopicCommand}" />
+                            <navigationButtons:WeightTopicNavigationButton Command="{Binding OpenWeightTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
