--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/NavigationButtons/FoodTopicNavigationButton.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/NavigationButtons/FoodTopicNavigationButton.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.NavigationButton"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.NavigationButtons.FoodTopicNavigationButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -36,16 +36,16 @@
                 <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Information about food and energy" />
             </Button.ToolTip>
             <Button.Content>
-                <ContentControl Content="{Binding IconPath, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                <ContentControl Content="/Frontend.WPF;component/Images/Icons/Emotions/Food/food1.jpg">
                     <ContentControl.ContentTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding}" Stretch="UniformToFill" />
+                            <Image Source="{Binding}" Stretch="Uniform" Margin="2"/>
                         </DataTemplate>
                     </ContentControl.ContentTemplate>
                 </ContentControl>
             </Button.Content>
         </Button>
-        <TextBlock Text="{Binding LabelText, RelativeSource={RelativeSource AncestorType=UserControl}}"
+        <TextBlock Text="Food &amp; Energy"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontWeight="Bold"
