Since girimons jukebox is a screen on its own it gets a button on the taskbar. Thats why it requires a nice little icon and propper title. It now has that.

--- a/DigimonWorldNet6/Frontend.WPF/Windows/MusicPlayer/MusicPlayerWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MusicPlayer/MusicPlayerWindow.xaml
@@ -10,6 +10,8 @@
                         xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
                         mc:Ignorable="d"
                         d:DataContext="{d:DesignInstance Type=musicPlayer1:MusicPlayerViewModel, IsDesignTimeCreatable=True}"
+                        Title="Giromons Jukebox"
+                        Icon="pack://application:,,,/Frontend.WPF;component/Images/Misc/jukebox.png"
                         ResizeMode="NoResize"
                         SizeToContent="WidthAndHeight"
                         WindowStyle="None"
