Added the pooping topic for the wiki
Capitalized all digimon word references to the users digimon.

Removed some obsolete csproj code.

--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -44,6 +44,7 @@
                         <WrapPanel Grid.Row="1" HorizontalAlignment="Center">
                             <navigationButtons:FoodTopicNavigationButton Command="{Binding OpenFoodTopicCommand}" />
                             <navigationButtons:WeightTopicNavigationButton Command="{Binding OpenWeightTopicCommand}" />
+                            <navigationButtons:PoopTopicNavigationButton Command="{Binding OpenPoopTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
