--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -45,6 +45,7 @@
                             <navigationButtons:FoodTopicNavigationButton Command="{Binding OpenFoodTopicCommand}" />
                             <navigationButtons:WeightTopicNavigationButton Command="{Binding OpenWeightTopicCommand}" />
                             <navigationButtons:PoopTopicNavigationButton Command="{Binding OpenPoopTopicCommand}" />
+                            <navigationButtons:AgeTopicNavigationButton Command="{Binding OpenAgeTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
