--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/FoodTopic/FoodTopicUserControl.xaml
@@ -105,7 +105,7 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Food chapter"
+                                        Content="Guide: Food"
                                         Command="{Binding OpenGuideFoodChapterCommand}">
                                     <Button.ToolTip>
                                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Food chapter of the guide" />
@@ -116,7 +116,7 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Hungry chapter"
+                                        Content="Guide: Hungry"
                                         Command="{Binding OpenGuideHungryChapterCommand}">
                                     <Button.ToolTip>
                                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Hungry chapter of the guide" />
