--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/PoopTopic/PoopTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/PoopTopic/PoopTopicUserControl.xaml
@@ -105,7 +105,7 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Pooping chapter"
+                                        Content="Guide: Pooping"
                                         Command="{Binding OpenGuidePoopingChapterCommand}">
                                     <Button.ToolTip>
                                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Pooping chapter of the guide" />
