--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/WeightTopic/WeightTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/WeightTopic/WeightTopicUserControl.xaml
@@ -111,7 +111,7 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Weight chapter"
+                                        Content="Guide: Weight"
                                         Command="{Binding OpenGuideFoodChapterCommand}">
                                     <Button.ToolTip>
                                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Weight chapter of the guide" />
