Added the Tiredness top and fixed some a couple of texts issues.

--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -47,6 +47,7 @@
                             <navigationButtons:PoopTopicNavigationButton Command="{Binding OpenPoopTopicCommand}" />
                             <navigationButtons:AgeTopicNavigationButton Command="{Binding OpenAgeTopicCommand}" />
                             <navigationButtons:TirednessTopicNavigationButton Command="{Binding OpenTirednessTopicCommand}" />
+                            <navigationButtons:SleepTopicNavigationButton Command="{Binding OpenSleepTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
