--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/SleepTopic/SleepTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/SleepTopic/SleepTopicUserControl.xaml
@@ -1,13 +1,13 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.AgeTopic.AgeTopicUserControl"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.SleepTopic.SleepTopicUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:ageTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.AgeTopic"
+             xmlns:tirednessTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.SleepTopic"
              Height="554"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=ageTopic:AgeTopicViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=tirednessTopic:SleepTopicViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -69,7 +69,7 @@
                                             Content="📖"
                                             Command="{Binding SpeakWikiTextCommand}">
                                         <Button.ToolTip>
-                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain age again" />
+                                            <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Ask shellmon to explain sleep again" />
                                         </Button.ToolTip>
                                     </Button>
                                 </Grid>
@@ -96,7 +96,7 @@
                 <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10,0" Background="{StaticResource DefaultBackGroundColor}">
-                            <StackPanel>
+                            <StackPanel >
                                 <Label VerticalAlignment="Top" Height="40" Width="120" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
                                     MORE INFO
                                 </Label>
@@ -105,32 +105,10 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
-                                        Content="Guide: Lifespan"
-                                        Command="{Binding OpenGuideLifespanChapterCommand}">
+                                        Content="Guide: Sleeping"
+                                        Command="{Binding OpenGuideSleepingChapterCommand}">
                                     <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Lifespan chapter of the guide" />
-                                    </Button.ToolTip>
-                                </Button>
-
-                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
-                                        Style="{StaticResource DefaultButtonStyle}"
-                                        Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
-                                        Content="YT: Lifespan part 1"
-                                        Command="{Binding OpenYoutubeLifespanPartOneClipCommand}">
-                                    <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the lifespan part 1 youtube clip" />
-                                    </Button.ToolTip>
-                                </Button>
-
-                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
-                                        Style="{StaticResource DefaultButtonStyle}"
-                                        Margin="0,0, 0, 5"
-                                        Height="{StaticResource DefaultButtonHeight}"
-                                        Content="YT: Lifespan part 2"
-                                        Command="{Binding OpenYoutubeLifespanPartTwoClipCommand}">
-                                    <Button.ToolTip>
-                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the lifespan part 2 youtube clip" />
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Sleeping chapter of the guide" />
                                     </Button.ToolTip>
                                 </Button>
                             </StackPanel>
@@ -140,23 +118,23 @@
             </Border>
 
             <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0">
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="300" Height="202" Source="Media/profile-section-screen.jpg" Stretch="UniformToFill">
+                        <Image Width="200" Height="202" Source="Media/sleep-condition-screen.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakAgeScreenCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyScreenCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
                     </Border>
                 </Border>
-                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0">
+                <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="285" Height="202" Source="Media/happiness-threshold-age-reduction.jpg" Stretch="UniformToFill">
+                        <Image Width="230" Height="202" Source="Media/sleep-condition-overworld.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakHappinessThresholdsCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakSleepyOverworldCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
