Added Area Preference wiki

--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -48,6 +48,7 @@
                             <navigationButtons:AgeTopicNavigationButton Command="{Binding OpenAgeTopicCommand}" />
                             <navigationButtons:TirednessTopicNavigationButton Command="{Binding OpenTirednessTopicCommand}" />
                             <navigationButtons:SleepTopicNavigationButton Command="{Binding OpenSleepTopicCommand}" />
+                            <navigationButtons:AreaPreferenceNavigationButton Command="{Binding OpenAreaPreferenceTopicCommand}" />
                         </WrapPanel>
                     </Grid>
                 </Border>
