Removed obsolete . from two sentences

--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -114,7 +114,7 @@
                                         Command="{Binding CloseCommand}">
                                     <Button.ToolTip>
                                         <ToolTip Style="{StaticResource DefaultToolTipRightStyle}"
-                                                 Content="Exit this window. (hotkey: ESC)" />
+                                                 Content="Exit this window (hotkey: ESC)" />
                                     </Button.ToolTip>
                                 </Button>
                             </Border>
