--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -123,7 +123,7 @@
                                     Content="Close"
                                     Command="{Binding CloseWindowCommand}">
                                 <Button.ToolTip>
-                                    <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Exit this window. (hotkey: ESC)" />
+                                    <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Exit this window (hotkey: ESC)" />
                                 </Button.ToolTip>
                             </Button>
                         </Grid>
