--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/DigiWikiUserControl.xaml
@@ -32,27 +32,7 @@
             </Grid.ColumnDefinitions>
             <Border Grid.Column="0" CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3, 3, 1.5, 3" Background="#90D9FA">
                 <Border CornerRadius="3" BorderBrush="Black" BorderThickness="3">
-                    <Grid Column="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="100" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Grid.Column="0" Height="40" Width="100" Style="{StaticResource DefaultSheenLabelStyle}" IsTabStop="False">
-                            TOPICS
-                        </Label>
-                        <WrapPanel Grid.Row="1" HorizontalAlignment="Center">
-                            <navigationButtons:FoodTopicNavigationButton Command="{Binding OpenFoodTopicCommand}" />
-                            <navigationButtons:WeightTopicNavigationButton Command="{Binding OpenWeightTopicCommand}" />
-                            <navigationButtons:PoopTopicNavigationButton Command="{Binding OpenPoopTopicCommand}" />
-                            <navigationButtons:AgeTopicNavigationButton Command="{Binding OpenAgeTopicCommand}" />
-                            <navigationButtons:TirednessTopicNavigationButton Command="{Binding OpenTirednessTopicCommand}" />
-                            <navigationButtons:SleepTopicNavigationButton Command="{Binding OpenSleepTopicCommand}" />
-                            <navigationButtons:AreaPreferenceTopicNavigationButton Command="{Binding OpenAreaPreferenceTopicCommand}" />
-                            <navigationButtons:FlowerTopicNavigationButton Command="{Binding OpenFlowerTopicCommand}" />
-                            <navigationButtons:InjuryTopicNavigationButton Command="{Binding OpenInjuryTopicCommand}" />
-                            <navigationButtons:SicknessTopicNavigationButton Command="{Binding OpenSicknessTopicCommand}" />
-                        </WrapPanel>
-                    </Grid>
+                    <ContentControl Content="{Binding CurrentSelectedMenuNavigation}" x:Name="CurrentSelectedMenuNavigation"></ContentControl>
                 </Border>
             </Border>
 
