--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/PoopyTopic/PoopyTopicUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/DigiWiki/UserControls/Topics/PoopyTopic/PoopyTopicUserControl.xaml
@@ -1,13 +1,13 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.PoopTopic.PoopTopicUserControl"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.PoopyTopic.PoopyTopicUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:poopTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.PoopTopic"
+             xmlns:poopyTopic="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.DigiWiki.UserControls.Topics.PoopyTopic"
              Height="554"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=poopTopic:PoopTopicViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=poopyTopic:PoopyTopicViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -116,6 +116,17 @@
                                         Style="{StaticResource DefaultButtonStyle}"
                                         Margin="0,0, 0, 5"
                                         Height="{StaticResource DefaultButtonHeight}"
+                                        Content="Guide: Poopy"
+                                        Command="{Binding OpenGuidePoopyChapterCommand}">
+                                    <Button.ToolTip>
+                                        <ToolTip Style="{StaticResource DefaultToolTipRightStyle}" Content="Opens the Pooping chapter of the guide" />
+                                    </Button.ToolTip>
+                                </Button>
+
+                                <Button FocusVisualStyle="{StaticResource DefaultFocusStyle}"
+                                        Style="{StaticResource DefaultButtonStyle}"
+                                        Margin="0,0, 0, 5"
+                                        Height="{StaticResource DefaultButtonHeight}"
                                         Content="YT: Disc. and pooping"
                                         Command="{Binding OpenYoutubeDiscAndPoopingClipCommand}">
                                     <Button.ToolTip>
@@ -131,10 +142,10 @@
             <WrapPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0, 15, 15, 15">
                 <Border BorderBrush="#060100" BorderThickness="3,3,0,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="286" Height="202" Source="Media/toilet-file-city.png" Stretch="UniformToFill">
+                        <Image Width="286" Height="202" Source="Media/pooping-condition-screen.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakToiletFileCityCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakPoopingConditionScreenCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
@@ -142,10 +153,10 @@
                 </Border>
                 <Border BorderBrush="#060100" BorderThickness="3,3,0,0" Margin="15, 0 ,0 ,0" >
                     <Border BorderBrush="#6789A5" BorderThickness="0,0,3,3" Background="#354A5B">
-                        <Image Width="270" Height="202" Source="Media/port.potty-shop.png" Stretch="UniformToFill">
+                        <Image Width="270" Height="202" Source="Media/pooping-condition-overworld.jpg" Stretch="UniformToFill">
                             <b:Interaction.Triggers>
                                 <b:EventTrigger EventName="MouseLeftButtonDown">
-                                    <b:InvokeCommandAction Command="{Binding SpeakPortpottyShopCommand}" />
+                                    <b:InvokeCommandAction Command="{Binding SpeakPoopingConditionOverworldCommand}" />
                                 </b:EventTrigger>
                             </b:Interaction.Triggers>
                         </Image>
